--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ body,
 }
 
 * {
-    font-family: sahel;
+    font-family: sahel !important;
 }
 
 *:focus {
@@ -155,22 +155,29 @@ body,
     font-weight: 400;
     width: 97%;
 }
+
 #l-title {
-  width: 91%;
+    width: 91%;
 }
+
 #l-type {
-  height: 34px;
+    height: 34px;
 }
+
 input[type="submit"] {
     background: #007bec;
     color: #fff;
     cursor: pointer;
+    margin-right: 97px;
 }
 
 input[type="submit"]:hover {
     opacity: 0.7;
 }
 
+option {
+    font-family: 'sahel';
+}
 
 /* Search Box new */
 
