error-handling-improved-&&-set-limit-request

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -246,3 +246,12 @@ img.currentLoc:hover {
     text-decoration: none;
     color: #333;
 }
+
+.success-msg{
+    color: green;
+    text-align: center;
+}
+.error-msg{
+    color: red;
+    text-align: center;
+}
