--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,13 +98,45 @@ body,
     flex-direction: column;
     justify-content: center;
 }
-
 .modal-overlay .modal {
     background: #fff;
     padding: 34px;
     border-radius: 24px;
     margin-top: -19px;
     position: relative;
+}
+.modal-overlay-adm {
+    position: fixed;
+    z-index: 999;
+    background: rgba(0, 0, 0, 0.7);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0; 
+}
+
+.modal-overlay-adm .modal-adm {
+    background: #fff;
+    border-radius: 10px;
+    position: relative;
+    min-width: 600px;
+    max-width: 800px;
+    margin-top: 0; 
+    padding-top: 20px;
+}
+
+.modal-overlay-adm .modal-adm .close {
+position: absolute;
+  top: 4px;
+  left: 9px;
+  color: #a90909;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 
